--- a/index.html
+++ b/index.html
@@ -3,86 +3,100 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Benjamin's Portfolio</title>
+  <title>Benjamin Otieno – Portfolio</title>
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Font: Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
+
+  <!-- Font Awesome for Icons -->
+  <script src="https://kit.fontawesome.com/a2e0e1d1e6.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-gray-50 text-gray-800">
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center bg-white px-4">
-    <h1 class="text-4xl md:text-6xl font-bold mb-4">Hello, I'm Benjamin</h1>
-    <p class="text-lg md:text-xl mb-6 max-w-xl">A passionate Software Enginner crafting digital experiences that are fast, accessible, and beautiful.</p>
-    <a href="#projects" class="px-6 py-3 bg-blue-600 text-white rounded-full hover:bg-blue-700">View My Work</a>
+  <section class="min-h-screen flex flex-col justify-center items-center text-center bg-gradient-to-br from-blue-50 to-indigo-100 px-4">
+    <h1 class="text-5xl md:text-6xl font-bold mb-4 text-gray-900">Hi, I'm Benjamin</h1>
+    <p class="text-lg md:text-xl mb-6 max-w-xl text-gray-700">A Full Stack Developer crafting fast, accessible & meaningful digital experiences.</p>
+    <a href="#projects" class="px-6 py-3 bg-indigo-600 text-white rounded-full hover:bg-indigo-700 transition duration-300 shadow-md hover:shadow-lg">View My Work</a>
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-16 px-4 bg-gray-100">
+  <section id="about" class="py-16 px-4 bg-white">
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-4">About Me</h2>
-      <p class="text-lg">I'm a full stack developer with a background in Software Engineering and a passion for building practical solutions. My tools of choice include JavaScript, Python, React, and DevOps workflows.</p>
+      <p class="text-lg text-gray-700">I’m a full stack developer with a background in emergency management. I create tools that solve real problems — fast, scalable, and beautiful. My stack includes Python, Django, React, Tailwind, and DevOps.</p>
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-16 px-4 bg-white">
+  <section id="projects" class="py-16 px-4 bg-gray-100">
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-10">Projects</h2>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Project Card -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">Interior Health App</h3>
-          <p class="mb-4">A healthcare platform providing affordable drugs to interior regions of Kenya. Built with Django + React.</p>
-          <a href="#" class="text-blue-600 hover:underline">View Project</a>
+        <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg hover:scale-105 transition duration-300">
+          <h3 class="text-xl font-bold mb-2 text-indigo-700">Interior Health App</h3>
+          <p class="mb-4 text-gray-700">Healthcare platform for interior regions of Kenya. Built with Django + React.</p>
+          <a href="#" class="text-indigo-600 hover:underline">View Project</a>
         </div>
-        <!-- Add more project cards here -->
+        <!-- Add more projects here -->
       </div>
     </div>
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="py-16 px-4 bg-gray-100">
+  <section id="skills" class="py-16 px-4 bg-white">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-8">Skills</h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 text-lg">
-        <div class="bg-white p-4 shadow rounded">Python</div>
-        <div class="bg-white p-4 shadow rounded">Django</div>
-        <div class="bg-white p-4 shadow rounded">JavaScript</div>
-        <div class="bg-white p-4 shadow rounded">React</div>
-        <div class="bg-white p-4 shadow rounded">Tailwind CSS</div>
-        <div class="bg-white p-4 shadow rounded">HTML & CSS</div>
-        <div class="bg-white p-4 shadow rounded">Git & GitHub</div>
-        <div class="bg-white p-4 shadow rounded">Docker</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">Python</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">Django</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">JavaScript</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">React</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">Tailwind CSS</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">HTML & CSS</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">Git & GitHub</div>
+        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">Docker</div>
       </div>
     </div>
   </section>
 
   <!-- Resume Section -->
-  <section id="resume" class="py-16 px-4 bg-white text-center">
+  <section id="resume" class="py-16 px-4 bg-gray-100 text-center">
     <div class="max-w-4xl mx-auto">
       <h2 class="text-3xl font-semibold mb-6">My Resume</h2>
-      <p class="mb-4 text-lg">Click below to download my latest resume.</p>
-      <a href="Benjamin_Resume.pdf" download class="px-6 py-3 bg-green-600 text-white rounded hover:bg-green-700">Download Resume</a>
+      <p class="mb-4 text-gray-700">Click below to download my resume in PDF format.</p>
+      <a href="Benjamin_Resume.pdf" download class="inline-flex items-center px-6 py-3 bg-green-600 text-white rounded hover:bg-green-700 transition">
+        <i class="fas fa-download mr-2"></i> Download Resume
+      </a>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-16 px-4 bg-gray-100">
+  <section id="contact" class="py-16 px-4 bg-white">
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-4">Contact Me</h2>
-      <p class="mb-4">Let's connect! Reach me via email or through my social links below.</p>
-      <p class="font-medium">benjaminalfayo90@gmail.com</p>
-      <div class="flex justify-center gap-4 mt-6">
-        <a href="https://github.com/Jujutsualfayo" target="_blank" class="text-gray-700 hover:text-black">GitHub</a>
-        <a href="https://linkedin.com/in/benjamin-alfayo" target="_blank" class="text-gray-700 hover:text-blue-700">LinkedIn</a>
+      <p class="mb-4 text-gray-700">Let's connect! You can reach me via email or through the links below.</p>
+      <p class="font-medium text-indigo-700">benjaminalfayo90@gmail.com</p>
+      <div class="flex justify-center gap-6 mt-6 text-xl">
+        <a href="https://github.com/Jujutsualfayo" target="_blank" class="text-gray-700 hover:text-black"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/benjamin-alfayo" target="_blank" class="text-blue-700 hover:text-blue-900"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white text-center py-6 border-t">
-    <p class="text-sm">&copy; 2025 Benjamin Otieno Alfayo. All rights reserved.</p>
+  <footer class="bg-gray-50 text-center py-6 border-t mt-10">
+    <p class="text-sm text-gray-500">&copy; 2025 Benjamin Otieno Alfayo. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
-
