--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="p-6">
     <h2 class="text-xl font-semibold mb-4">📄 Resume</h2>
     <p>Download my resume in PDF:</p>
-    <a href="./resume.pdf" class="text-blue-500 hover:underline" download>📎 Download Resume</a>
+    <a href="./Benjamin_Resume.pdf" class="text-blue-500 hover:underline" download>📎 Download Resume</a>
   </section>
 
   <section class="p-6">
