--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="text-center">
         <h2 class="text-3xl font-semibold mb-2">Welcome to My Portfolio 🚀</h2>
         <p class="text-lg text-gray-600 dark:text-gray-300">
-          Backend Developer | Passionate about solving real-world problems through clean code.
+          Software Engineer | Passionate about solving real-world problems through clean code.
         </p>
       </section>
 
