--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <section class="text-center">
         <h3 class="text-xl font-bold mb-2">📄 Resume</h3>
-        <a href="resume.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">
+        <a href="Benjamin_Resume.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">
           Download my Resume (PDF)
         </a>
       </section>
