--- a/index.html
+++ b/index.html
@@ -1,98 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benjamin Alfayo | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class'
+      }
+    </script>
   </head>
-  <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-white transition-colors duration-300">
-    <header class="p-4 flex justify-between items-center shadow-md dark:shadow-gray-800">
-      <h1 class="text-2xl font-bold">👨‍💻 Benjamin Alfayo</h1>
-      <button id="theme-toggle" class="bg-gray-200 dark:bg-gray-700 px-4 py-1 rounded-full text-sm">
-        🌗 Toggle Mode
+  <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white transition-colors duration-300">
+    <!-- Dark Mode Toggle -->
+    <div class="flex justify-end p-4">
+      <button id="toggleMode" class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-white px-4 py-2 rounded shadow">
+        🌞/🌚 Toggle Mode
       </button>
+    </div>
+
+    <!-- Header -->
+    <header class="text-center py-10">
+      <h1 class="text-4xl font-bold">👋 Hi, I'm Benjamin Alfayo</h1>
+      <p class="text-lg mt-2">Software Engineer</p>
     </header>
 
-    <main class="max-w-4xl mx-auto px-4 py-10 space-y-12">
-      <section class="text-center">
-        <h2 class="text-3xl font-semibold mb-2">Welcome to My Portfolio 🚀</h2>
-        <p class="text-lg text-gray-600 dark:text-gray-300">
-          Software Engineer | Passionate about solving real-world problems through clean code.
-        </p>
-      </section>
+    <!-- About Section -->
+    <section class="max-w-2xl mx-auto px-4 py-8">
+      <h2 class="text-2xl font-semibold mb-4">📘 About Me</h2>
+      <p>
+        I'm a passionate Full Stack Software Engineer skilled in curating scalable backend systems, web applications and solving real-world problems with clean code.
+      </p>
+    </section>
 
-      <section>
-        <h3 class="text-2xl font-bold mb-4">🧩 Projects</h3>
-        <div class="grid md:grid-cols-2 gap-6">
-          <!-- Interior Health -->
-          <div class="p-4 border rounded-lg dark:border-gray-700 hover:shadow-lg transition">
-            <h4 class="text-xl font-semibold">💊 Interior Health</h4>
-            <p class="text-sm mt-2 text-gray-700 dark:text-gray-400">
-              A health app delivering affordable drugs to interior regions with role-based access and payment features.
-            </p>
-            <a href="https://github.com/Jujutsualfayo/interiorhealth_vol2" target="_blank" class="inline-block mt-3 text-blue-600 dark:text-blue-400 hover:underline">
-              🔗 GitHub Repo
-            </a>
-          </div>
-
-          <!-- Jobify -->
-          <div class="p-4 border rounded-lg dark:border-gray-700 hover:shadow-lg transition">
-            <h4 class="text-xl font-semibold">🧑‍💼 Jobify</h4>
-            <p class="text-sm mt-2 text-gray-700 dark:text-gray-400">
-              A job tracking application with authentication and status management.
-            </p>
-            <a href="https://github.com/Jujutsualfayo/jobify" target="_blank" class="inline-block mt-3 text-blue-600 dark:text-blue-400 hover:underline">
-              🔗 GitHub Repo
-            </a>
-          </div>
-
-          <!-- Project Management App -->
-          <div class="p-4 border rounded-lg dark:border-gray-700 hover:shadow-lg transition">
-            <h4 class="text-xl font-semibold">📋 Project Management App</h4>
-            <p class="text-sm mt-2 text-gray-700 dark:text-gray-400">
-              A full-stack project management tool for tracking tasks, timelines, and updates.
-            </p>
-            <a href="https://github.com/Jujutsualfayo/Project-Management-app" target="_blank" class="inline-block mt-3 text-blue-600 dark:text-blue-400 hover:underline">
-              🔗 GitHub Repo
-            </a>
-          </div>
+    <!-- Projects Section -->
+    <section class="max-w-4xl mx-auto px-4 py-8">
+      <h2 class="text-2xl font-semibold mb-6">🚀 Featured Projects</h2>
+      <div class="grid md:grid-cols-3 gap-6">
+        <!-- Interior Health -->
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+          <h3 class="text-xl font-bold mb-2">💊 Interior Health</h3>
+          <p>A platform providing affordable healthcare drugs to underserved regions.</p>
+          <a href="https://github.com/Jujutsualfayo/interiorhealth_vol2" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
         </div>
-      </section>
 
-      <section class="text-center">
-        <h3 class="text-xl font-bold mb-2">📄 Resume</h3>
-        <a href="Benjamin_Resume.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">
-          Download my Resume (PDF)
-        </a>
-      </section>
-
-      <section class="text-center">
-        <h3 class="text-xl font-bold mb-2">🔗 Connect with Me</h3>
-        <div class="flex justify-center space-x-6 text-2xl">
-          <a href="https://github.com/Jujutsualfayo" target="_blank">🐙</a>
-          <a href="https://linkedin.com/in/benjamin-alfayo" target="_blank">💼</a>
-          <a href="mailto:benjaminalfayo90@gmail.com">✉️</a>
+        <!-- Jobify -->
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+          <h3 class="text-xl font-bold mb-2">💼 Jobify</h3>
+          <p>A modern job tracking app with authentication and CRUD features.</p>
+          <a href="https://github.com/Jujutsualfayo/jobify" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
         </div>
-      </section>
-    </main>
 
-    <footer class="text-center py-6 text-sm text-gray-500 dark:text-gray-400">
-      © 2025 Benjamin Alfayo. All rights reserved.
+        <!-- Project Management App -->
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+          <h3 class="text-xl font-bold mb-2">🗂️ Project Management App</h3>
+          <p>Collaborative tool to manage tasks, sprints, and project progress.</p>
+          <a href="https://github.com/Jujutsualfayo/Project-Management-app" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section class="max-w-xl mx-auto px-4 py-8 text-center">
+      <h2 class="text-2xl font-semibold mb-4">📄 Resume</h2>
+      <p class="mb-4">Want to know more about my background and skills?</p>
+      <a
+        href="Benjamin_Resume.pdf"
+        target="_blank"
+        class="inline-block px-6 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700 transition"
+        download
+      >
+        ⬇️ Download Resume (PDF)
+      </a>
+    </section>
+
+    <!-- Contact -->
+    <section class="max-w-xl mx-auto px-4 py-8 text-center">
+      <h2 class="text-2xl font-semibold mb-4">📬 Get in Touch</h2>
+      <p>Feel free to reach out to me via my socials or check out my work below.</p>
+      <div class="mt-4 flex justify-center gap-6 text-2xl">
+        <a href="https://github.com/Jujutsualfayo" target="_blank" class="hover:text-blue-500">🐙 GitHub</a>
+        <a href="https://linkedin.com/in/benjamin-alfayo" target="_blank" class="hover:text-blue-700">💼 LinkedIn</a>
+        <a href="https://twitter.com/AlfayoOtieno" target="_blank" class="hover:text-sky-400">🐦 Twitter</a>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center py-6 text-sm text-gray-600 dark:text-gray-400">
+      © 2025 Benjamin Alfayo. Built with ❤️ and TailwindCSS.
     </footer>
 
+    <!-- Toggle Script -->
     <script>
-      // Apply saved theme on load
-      if (localStorage.getItem('theme') === 'dark') {
-        document.documentElement.classList.add('dark');
-      }
+      const toggleBtn = document.getElementById('toggleMode');
+      const htmlEl = document.documentElement;
 
-      // Toggle theme
-      document.getElementById('theme-toggle').addEventListener('click', () => {
-        document.documentElement.classList.toggle('dark');
-        const isDark = document.documentElement.classList.contains('dark');
-        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      toggleBtn.addEventListener('click', () => {
+        htmlEl.classList.toggle('dark');
+        localStorage.setItem('theme', htmlEl.classList.contains('dark') ? 'dark' : 'light');
       });
+
+      // Persist theme
+      if (localStorage.getItem('theme') === 'dark') {
+        htmlEl.classList.add('dark');
+      }
     </script>
   </body>
 </html>
