--- a/index.html
+++ b/index.html
@@ -10,23 +10,45 @@
         darkMode: 'class'
       }
     </script>
+    <style>
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .animate-fadeInUp {
+        animation: fadeInUp 0.8s ease forwards;
+      }
+    </style>
   </head>
   <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white transition-colors duration-300">
     <!-- Dark Mode Toggle -->
     <div class="flex justify-end p-4">
-      <button id="toggleMode" class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-white px-4 py-2 rounded shadow">
+      <button
+        id="toggleMode"
+        class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-white px-4 py-2 rounded shadow transition-colors duration-300 hover:bg-gray-300 dark:hover:bg-gray-600"
+        aria-label="Toggle dark mode"
+      >
         🌞/🌚 Toggle Mode
       </button>
     </div>
 
     <!-- Header -->
-    <header class="text-center py-10">
+    <header class="text-center py-10 animate-fadeInUp" style="animation-delay: 0.1s;">
       <h1 class="text-4xl font-bold">👋 Hi, I'm Benjamin Alfayo</h1>
       <p class="text-lg mt-2">Software Engineer</p>
     </header>
 
     <!-- About Section -->
-    <section class="max-w-2xl mx-auto px-4 py-8">
+    <section
+      class="max-w-2xl mx-auto px-4 py-8 animate-fadeInUp"
+      style="animation-delay: 0.3s;"
+    >
       <h2 class="text-2xl font-semibold mb-4">📘 About Me</h2>
       <p>
         I'm a passionate Full Stack Software Engineer skilled in curating scalable backend systems, web applications and solving real-world problems with clean code.
@@ -34,54 +56,104 @@
     </section>
 
     <!-- Projects Section -->
-    <section class="max-w-4xl mx-auto px-4 py-8">
+    <section
+      class="max-w-4xl mx-auto px-4 py-8 animate-fadeInUp"
+      style="animation-delay: 0.5s;"
+    >
       <h2 class="text-2xl font-semibold mb-6">🚀 Featured Projects</h2>
       <div class="grid md:grid-cols-3 gap-6">
         <!-- Interior Health -->
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transition-shadow duration-300 hover:shadow-lg">
           <h3 class="text-xl font-bold mb-2">💊 Interior Health</h3>
-          <p>A platform providing affordable healthcare drugs to underserved regions.</p>
-          <a href="https://github.com/Jujutsualfayo/interiorhealth_vol2" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
+          <p>
+            A platform providing affordable healthcare drugs to underserved regions.
+          </p>
+          <a
+            href="https://interiorhealth-vol2.vercel.app"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-blue-600 underline mt-2 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🔗 View Live Site</a
+          ><br />
+          <a
+            href="https://github.com/Jujutsualfayo/interiorhealth_vol2"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-blue-600 underline mt-1 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🔗 View on GitHub</a
+          >
         </div>
 
         <!-- Jobify -->
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transition-shadow duration-300 hover:shadow-lg">
           <h3 class="text-xl font-bold mb-2">💼 Jobify</h3>
           <p>A modern job tracking app with authentication and CRUD features.</p>
-          <a href="https://github.com/Jujutsualfayo/jobify" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
+          <a
+            href="https://github.com/Jujutsualfayo/jobify"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-blue-600 underline mt-2 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🔗 View on GitHub</a
+          >
         </div>
 
         <!-- Project Management App -->
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transition-shadow duration-300 hover:shadow-lg">
           <h3 class="text-xl font-bold mb-2">🗂️ Project Management App</h3>
           <p>Collaborative tool to manage tasks, sprints, and project progress.</p>
-          <a href="https://github.com/Jujutsualfayo/Project-Management-app" class="text-blue-500 underline mt-2 inline-block">🔗 View on GitHub</a>
+          <a
+            href="https://github.com/Jujutsualfayo/Project-Management-app"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-blue-600 underline mt-2 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🔗 View on GitHub</a
+          >
         </div>
       </div>
     </section>
 
     <!-- Resume Section -->
-    <section class="max-w-xl mx-auto px-4 py-8 text-center">
+    <section
+      class="max-w-xl mx-auto px-4 py-8 text-center animate-fadeInUp"
+      style="animation-delay: 0.7s;"
+    >
       <h2 class="text-2xl font-semibold mb-4">📄 Resume</h2>
       <p class="mb-4">Want to know more about my background and skills?</p>
       <a
         href="Benjamin_Resume.pdf"
         target="_blank"
-        class="inline-block px-6 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700 transition"
+        class="inline-block px-6 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700 transition duration-300"
         download
+        >⬇️ Download Resume (PDF)</a
       >
-        ⬇️ Download Resume (PDF)
-      </a>
     </section>
 
     <!-- Contact -->
-    <section class="max-w-xl mx-auto px-4 py-8 text-center">
+    <section
+      class="max-w-xl mx-auto px-4 py-8 text-center animate-fadeInUp"
+      style="animation-delay: 0.9s;"
+    >
       <h2 class="text-2xl font-semibold mb-4">📬 Get in Touch</h2>
       <p>Feel free to reach out to me via my socials or check out my work below.</p>
       <div class="mt-4 flex justify-center gap-6 text-2xl">
-        <a href="https://github.com/Jujutsualfayo" target="_blank" class="hover:text-blue-500">🐙 GitHub</a>
-        <a href="https://linkedin.com/in/benjamin-alfayo" target="_blank" class="hover:text-blue-700">💼 LinkedIn</a>
-        <a href="https://twitter.com/AlfayoOtieno" target="_blank" class="hover:text-sky-400">🐦 Twitter</a>
+        <a
+          href="https://github.com/Jujutsualfayo"
+          target="_blank"
+          class="hover:text-blue-500 transition-colors duration-300"
+          >🐙 GitHub</a
+        >
+        <a
+          href="https://linkedin.com/in/benjamin-alfayo"
+          target="_blank"
+          class="hover:text-blue-700 transition-colors duration-300"
+          >💼 LinkedIn</a
+        >
+        <a
+          href="https://twitter.com/AlfayoOtieno"
+          target="_blank"
+          class="hover:text-sky-400 transition-colors duration-300"
+          >🐦 Twitter</a
+        >
       </div>
     </section>
 
@@ -97,7 +169,10 @@
 
       toggleBtn.addEventListener('click', () => {
         htmlEl.classList.toggle('dark');
-        localStorage.setItem('theme', htmlEl.classList.contains('dark') ? 'dark' : 'light');
+        localStorage.setItem(
+          'theme',
+          htmlEl.classList.contains('dark') ? 'dark' : 'light'
+        );
       });
 
       // Persist theme
