--- a/index.html
+++ b/index.html
@@ -69,18 +69,23 @@
             A platform providing affordable healthcare drugs to underserved regions.
           </p>
           <a
+            href="/projects/interiorhealth.html"
+            class="text-blue-600 underline mt-2 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🔗 View Details</a
+          ><br />
+          <a
             href="https://interiorhealth-vol2.vercel.app"
             target="_blank"
             rel="noopener noreferrer"
-            class="text-blue-600 underline mt-2 inline-block transition-colors duration-300 hover:text-blue-800"
-            >🔗 View Live Site</a
+            class="text-blue-600 underline mt-1 inline-block transition-colors duration-300 hover:text-blue-800"
+            >🌐 Live Site</a
           ><br />
           <a
             href="https://github.com/Jujutsualfayo/interiorhealth_vol2"
             target="_blank"
             rel="noopener noreferrer"
             class="text-blue-600 underline mt-1 inline-block transition-colors duration-300 hover:text-blue-800"
-            >🔗 View on GitHub</a
+            >📂 GitHub Repo</a
           >
         </div>
 
@@ -159,7 +164,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-6 text-sm text-gray-600 dark:text-gray-400">
-      © 2025 Benjamin Alfayo. Built with ❤️ and TailwindCSS.
+      © 2025 Benjamin Alfayo.
     </footer>
 
     <!-- Toggle Script -->
