--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Header -->
     <header class="text-center py-10 animate-fadeInUp" style="animation-delay: 0.1s;">
       <h1 class="text-4xl font-bold">👋 Hi, I'm Benjamin Alfayo</h1>
-      <p class="text-lg mt-2">Software Engineer</p>
+      <p class="text-lg mt-2">Software Engineer / Cloud Architect</p>
     </header>
 
     <!-- About Section -->
